# tgm-dezsys-gk861-gRPC

./: .gitignore  CMakeLists.txt  Makefile  README.md
proto/: warehouse.proto
python/src/: client.py  warehouse_pb2.py  warehouse_pb2.pyi  warehouse_pb2_grpc.py
src/: client.cpp  server.cpp
